--- a/pix2pix.ipynb
+++ b/pix2pix.ipynb
@@ -10,13 +10,13 @@
     {
      "ename": "ImportError",
      "evalue": "No module named 'google.colab'",
+     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-11-4a3bb3c808c6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpython\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtraining\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbasic_session_run_hooks\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mCheckpointSaverHook\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmeta_graph\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpython\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplatform\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtf_logging\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mlogging\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[1;32mfrom\u001b[0m \u001b[0mgoogle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolab\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mdrive\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mauth\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mImportError\u001b[0m: No module named 'google.colab'"
-     ],
-     "output_type": "error"
+     ]
     }
    ],
    "source": [
@@ -104,8 +104,8 @@
     "            input_images += tf.random_normal(shape=tf.shape(input_images), mean=0.0, stddev=0.1, dtype=tf.float32)\n",
     "\n",
     "        features = {\n",
-    "            'real_images': images,\n",
-    "            'random_noise': tf.random_uniform([params['batch_size'], LATENT_DIM], -1, 1, dtype=tf.float32)\n",
+    "            'image_input': input_images,\n",
+    "            'image_result': result_images,\n",
     "        }\n",
     "        return features, None\n",
     "    return input_fn\n",
@@ -118,9 +118,9 @@
     "    return {'image_input': input_images}, None\n",
     "\n",
     "\n",
-    "def noise_input_fn(params):  \n",
-    "    noise_dataset = tf.data.Dataset.from_tensors(tf.constant(np.random.uniform(-1, 1, (params['batch_size'], LATENT_DIM)), dtype=tf.float32))\n",
-    "    return {'random_noise': noise_dataset.make_one_shot_iterator().get_next()}, None\n"
+    "# def noise_input_fn(params):  \n",
+    "#     noise_dataset = tf.data.Dataset.from_tensors(tf.constant(np.random.uniform(-1, 1, (params['batch_size'], LATENT_DIM)), dtype=tf.float32))\n",
+    "#     return {'random_noise': noise_dataset.make_one_shot_iterator().get_next()}, None\n"
    ]
   },
   {
@@ -156,20 +156,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-4-fafac13e1aeb>, line 88)",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-fafac13e1aeb>\"\u001b[0;36m, line \u001b[0;32m88\u001b[0m\n\u001b[0;31m    x8 = deconvolution_block(tf.concat([x1, x7], CHANNELS, 2, is_training, 24, activation=tf.tanh, batch_norm=False)\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ],
-     "output_type": "error"
-    }
-   ],
+   "outputs": [],
    "source": [
     "################################## MODEL #######################################\n",
     "\n",
@@ -257,8 +248,8 @@
     "\n",
     "            x5 = deconvolution_block(x4, 512, 2, is_training, 21)\n",
     "            x6 = deconvolution_block(tf.concat([x3, x5], axis=0), 256, 2, is_training, 22)\n",
-    "            x7 = deconvolution_block(tf.concat([x2, x6], 128, 2, is_training, 23)\n",
-    "            x8 = deconvolution_block(tf.concat([x1, x7], CHANNELS, 2, is_training, 24, activation=tf.tanh, batch_norm=False)\n",
+    "            x7 = deconvolution_block(tf.concat([x2, x6], axis=0), 128, 2, is_training, 23)\n",
+    "            x8 = deconvolution_block(tf.concat([x1, x7], axis=0), CHANNELS, 2, is_training, 24, activation=tf.tanh, batch_norm=False)\n",
     "\n",
     "            return x8"
    ]
@@ -277,97 +268,17 @@
     "    def model_fn(features, labels, mode, params):\n",
     "        # PREDICT #\n",
     "        if mode == tf.estimator.ModeKeys.PREDICT:\n",
-    "            random_noise = features['random_noise']\n",
-    "            generated_images = model.generator(random_noise, is_training=False)\n",
-    "            predictions = {'generated_images': generated_images}\n",
+    "            image_input = features['image_input']\n",
+    "            generated_images = model.generator(image_input, is_training=False)\n",
+    "            predictions = {'generated_images': generated_images, 'image_input': image_input}\n",
     "            return tf.contrib.tpu.TPUEstimatorSpec(mode=mode, predictions=predictions)\n",
     "\n",
-    "        real_images = features['real_images']\n",
-    "        random_noise = features['random_noise']\n",
-    "        generated_images = model.generator(random_noise, is_training=(mode == tf.estimator.ModeKeys.TRAIN))\n",
+    "        image_result = features['image_result']\n",
+    "        image_input = features['image_input']\n",
+    "        generated_images = model.generator(image_input, is_training=(mode == tf.estimator.ModeKeys.TRAIN))\n",
     "\n",
     "        # Discriminator loss\n",
-    "        d_on_data_logits = tf.squeeze(model.discriminator(real_images))\n",
-    "        d_on_data_labels = tf.ones_like(d_on_data_logits)\n",
-    "\n",
-    "        d_on_g_logits = tf.squeeze(model.discriminator(generated_images))\n",
-    "        d_on_g_labels = tf.zeros_like(d_on_g_logits)\n",
-    "\n",
-    "        d_loss = tf.contrib.gan.losses.wargs.modified_discriminator_loss(\n",
-    "            discriminator_real_outputs=d_on_data_logits,\n",
-    "            discriminator_gen_outputs=d_on_g_logits,\n",
-    "            reduction=tf.losses.Reduction.NONE,\n",
-    "            label_smoothing=0.2\n",
-    "        )\n",
-    "\n",
-    "        # Generator loss\n",
-    "        g_loss = tf.contrib.gan.losses.wargs.modified_generator_loss(\n",
-    "            discriminator_gen_outputs=d_on_g_logits,\n",
-    "            reduction=tf.losses.Reduction.NONE\n",
-    "        )\n",
-    "\n",
-    "        # TRAIN #\n",
-    "        if mode == tf.estimator.ModeKeys.TRAIN:\n",
-    "            d_loss = tf.reduce_mean(d_loss)\n",
-    "            g_loss = tf.reduce_mean(g_loss)\n",
-    "            d_optimizer = tf.train.AdamOptimizer(learning_rate=D_LR, beta1=0.5)\n",
-    "            g_optimizer = tf.train.AdamOptimizer(learning_rate=G_LR, beta1=0.5)\n",
-    "\n",
-    "            d_optimizer = tf.contrib.tpu.CrossShardOptimizer(d_optimizer)\n",
-    "            g_optimizer = tf.contrib.tpu.CrossShardOptimizer(g_optimizer)\n",
-    "\n",
-    "            with tf.control_dependencies(tf.get_collection(tf.GraphKeys.UPDATE_OPS)):\n",
-    "                d_step = d_optimizer.minimize(d_loss, var_list=tf.get_collection(tf.GraphKeys.GLOBAL_VARIABLES,\n",
-    "                                                                                 scope='Discriminator'))\n",
-    "                g_step = g_optimizer.minimize(g_loss, var_list=tf.get_collection(tf.GraphKeys.GLOBAL_VARIABLES,\n",
-    "                                                                                 scope='Generator'))\n",
-    "\n",
-    "                increment_step = tf.assign_add(tf.train.get_or_create_global_step(), 1)\n",
-    "                joint_op = tf.group([d_step, g_step, increment_step])\n",
-    "\n",
-    "                return tf.contrib.tpu.TPUEstimatorSpec(mode=mode, loss=g_loss, train_op=joint_op)\n",
-    "\n",
-    "        # EVAL #\n",
-    "        elif mode == tf.estimator.ModeKeys.EVAL:\n",
-    "            def _eval_metric_fn(d_loss, g_loss, d_real_labels, d_gen_lanels, d_real_logits, d_gen_logits):\n",
-    "                return {\n",
-    "                    'discriminator_loss': tf.metrics.mean(d_loss),\n",
-    "                    'generator_loss': tf.metrics.mean(g_loss),\n",
-    "                    'discriminator_real_accuracy': tf.metrics.accuracy(labels=d_real_labels, predictions=tf.math.round(tf.sigmoid(d_real_logits))),\n",
-    "                    'discriminator_gen_accuracy': tf.metrics.accuracy(labels=d_gen_lanels, predictions=tf.math.round(tf.sigmoid(d_gen_logits))),\n",
-    "                }\n",
-    "\n",
-    "            return tf.contrib.tpu.TPUEstimatorSpec(mode=mode, loss=tf.reduce_mean(g_loss),\n",
-    "                                                   eval_metrics=(_eval_metric_fn, [d_loss, g_loss, d_on_data_labels,\n",
-    "                                                                                   d_on_g_labels, d_on_data_logits, d_on_g_logits]))\n",
-    "    return model_fn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "################################ MODEL FUN #####################################\n",
-    "\n",
-    "def make_model_fn(model):\n",
-    "    def model_fn(features, labels, mode, params):\n",
-    "        # PREDICT #\n",
-    "        if mode == tf.estimator.ModeKeys.PREDICT:\n",
-    "            random_noise = features['random_noise']\n",
-    "            generated_images = model.generator(random_noise, is_training=False)\n",
-    "            predictions = {'generated_images': generated_images}\n",
-    "            return tf.contrib.tpu.TPUEstimatorSpec(mode=mode, predictions=predictions)\n",
-    "\n",
-    "        real_images = features['real_images']\n",
-    "        random_noise = features['random_noise']\n",
-    "        generated_images = model.generator(random_noise, is_training=(mode == tf.estimator.ModeKeys.TRAIN))\n",
-    "\n",
-    "        # Discriminator loss\n",
-    "        d_on_data_logits = tf.squeeze(model.discriminator(real_images))\n",
+    "        d_on_data_logits = tf.squeeze(model.discriminator(image_result))\n",
     "        d_on_data_labels = tf.ones_like(d_on_data_logits)\n",
     "\n",
     "        d_on_g_logits = tf.squeeze(model.discriminator(generated_images))\n",
@@ -489,7 +400,7 @@
     "        tf.logging.info(metrics)\n",
     "\n",
     "        # Render some generated images\n",
-    "        generated_iter = cpu_est.predict(input_fn=noise_input_fn)\n",
+    "        generated_iter = cpu_est.predict(input_fn=predict_input_fn)\n",
     "        images = [p['generated_images'] for p in generated_iter]\n",
     "        save_imgs(current_step, images)\n",
     "        tf.logging.info('Finished generating images')"
@@ -521,13 +432,13 @@
     {
      "ename": "NameError",
      "evalue": "name 'os' is not defined",
+     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-10-cdc4e7370210>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0mMODEL_DIR\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'gs://tputestingmnist/{}/'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mRUN_NAME\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0mGOOGLE_DRIVE_DIR\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'/content/gdrive/My Drive/Programowanie/PixelGen/{}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mRUN_NAME\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0mTF_MASTER\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'grpc://{}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0menviron\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'COLAB_TPU_ADDR'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
-     ],
-     "output_type": "error"
+     ]
     }
    ],
    "source": [
