--- a/funit_2.ipynb
+++ b/funit_2.ipynb
@@ -255,14 +255,14 @@
         "                           kernel_initializer=tf.truncated_normal_initializer(stddev=0.02))\n",
         "\n",
         "\n",
-        "def _conv2d(x, filters, stride, name, activation=None):\n",
-        "    return tf.layers.conv2d(x, filters, [KERNEL_SIZE, KERNEL_SIZE], \n",
+        "def _conv2d(x, filters, kernel_size, stride, name, activation=None):\n",
+        "    return tf.layers.conv2d(x, filters, [kernel_size, kernel_size], \n",
         "                            strides=[stride, stride], activation=activation,\n",
         "                            padding='same', name=name,\n",
         "                            kernel_initializer=tf.truncated_normal_initializer(stddev=0.02))\n",
         "\n",
-        "def _pooling(x, stride, index):\n",
-        "    return tf.layers.average_pooling2d(x, pool_size=stride, strides=stride, name='pool_{}'.format(index))\n",
+        "def _pooling(x, kerrnel, stride, index):\n",
+        "    return tf.layers.average_pooling2d(x, pool_size=kernel, strides=stride, name='pool_{}'.format(index))\n",
         "\n",
         "def _deconv2d(x, filters, stride, name, activation=None):\n",
         "    return tf.layers.conv2d_transpose(x, filters, [KERNEL_SIZE, KERNEL_SIZE],\n",
@@ -271,10 +271,10 @@
         "                                      kernel_initializer=tf.truncated_normal_initializer(stddev=0.02))\n",
         "\n",
         "\n",
-        "def convolution_block(x, filters, resize_factor, index, activation=_relu, activation_first=False, normalization=None):\n",
+        "def convolution_block(x, filters, kernel_size, resize_factor, index, activation=_relu, activation_first=False, normalization=None):\n",
         "    if activation and activation_first:\n",
         "        x = activation(x)\n",
-        "    x = _conv2d(x, filters=filters, stride=resize_factor, activation=None, name='conv_{}'.format(index))\n",
+        "    x = _conv2d(x, kernel_size=kernel_size, filters=filters, stride=resize_factor, activation=None, name='conv_{}'.format(index))\n",
         "    if normalization:\n",
         "        x = normalization(x)\n",
         "    if activation and not activation_first:\n",
@@ -300,11 +300,11 @@
         "    return x\n",
         "\n",
         "\n",
-        "def residual_block(x, filters_in, filters_out, index, activation=_relu, activation_first=False, normalization=None):\n",
-        "    forwarded_x = convolution_block(x, filters_in, 1, index='res_con1_{}'.format(index), activation_first=activation_first, activation=activation)\n",
-        "    forwarded_x = convolution_block(forwarded_x, filters_out, 1, index='res_con2_{}'.format(index), activation_first=activation_first, activation=activation)\n",
+        "def residual_block(x, filters_in, filters_out, index, kernel_size=3, activation=_relu, activation_first=False, normalization=None):\n",
+        "    forwarded_x = convolution_block(x, filters_in, kernel_size, 1, index='res_con1_{}'.format(index), activation_first=activation_first, activation=activation)\n",
+        "    forwarded_x = convolution_block(forwarded_x, filters_out, kernel_size, 1, index='res_con2_{}'.format(index), activation_first=activation_first, activation=activation)\n",
         "    if filters_in != filters_out:\n",
-        "        x = convolution_block(x, filters_out, 1, index='res_con3_{}'.format(index), activation_first=activation_first, activation=activation)\n",
+        "        x = convolution_block(x, filters_out, 1, 1, index='res_con3_{}'.format(index))\n",
         "    x = tf.add(forwarded_x, x)\n",
         "    return x\n",
         "\n",
@@ -315,13 +315,23 @@
         "\n",
         "\n",
         "def content_encoder(x):\n",
-        "    x = convolution_block(x, 64, resize_factor=1, normalization=_instance_norm, index='con1')\n",
-        "    x = convolution_block(x, 128, resize_factor=2, normalization=_instance_norm, index='con2')\n",
-        "    x = convolution_block(x, 256, resize_factor=2, normalization=_instance_norm, index='con3')\n",
-        "    x = convolution_block(x, 512, resize_factor=2, normalization=_instance_norm, index='con4')\n",
+        "    x = convolution_block(x, 64, kernel_size=7, resize_factor=1, normalization=_instance_norm, index='con1')\n",
+        "    x = convolution_block(x, 128, kernel_size=4, resize_factor=2, normalization=_instance_norm, index='con2')\n",
+        "    x = convolution_block(x, 256, kernel_size=4, resize_factor=2, normalization=_instance_norm, index='con3')\n",
+        "    x = convolution_block(x, 512, kernel_size=4, resize_factor=2, normalization=_instance_norm, index='con4')\n",
         "    \n",
         "    x = residual_block(x, 512, 512, index='res1', normalization=_instance_norm)\n",
         "    x = residual_block(x, 512, 512, index='res2', normalization=_instance_norm)\n",
+        "    return x\n",
+        "\n",
+        "\n",
+        "def class_encoder(x):\n",
+        "    x = convolution_block(x, 64, kernel_size=7, resize_factor=1, index='cls1')\n",
+        "    x = convolution_block(x, 128, kernel_size=4, resize_factor=2, index='cls2')\n",
+        "    x = convolution_block(x, 256, kernel_size=4, resize_factor=2, index='cls3')\n",
+        "    x = convolution_block(x, 512, kernel_size=4, resize_factor=2, index='cls4')\n",
+        "    x = convolution_block(x, 1024, kernel_size=4, resize_factor=2, index='cls5')\n",
+        "    x = _pooling(x, 3, 3, index='cls6')\n",
         "    return x\n",
         "\n",
         "\n",
@@ -342,15 +352,6 @@
         "    return x\n",
         "\n",
         "\n",
-        "def class_encoder(x):\n",
-        "    x = convolution_block(x, 64, resize_factor=1, index='cls1')\n",
-        "    x = convolution_block(x, 128, resize_factor=2, index='cls2')\n",
-        "    x = convolution_block(x, 256, resize_factor=2, index='cls3')\n",
-        "    x = convolution_block(x, 512, resize_factor=2, index='cls4')\n",
-        "    x = convolution_block(x, 1024, resize_factor=2, index='cls5')\n",
-        "    x = _pooling(x, 3, index='cls6')\n",
-        "    return x\n",
-        "\n",
         "class Funit:\n",
         "\n",
         "    @staticmethod\n",
@@ -358,27 +359,26 @@
         "        with tf.variable_scope(scope, reuse=tf.AUTO_REUSE):\n",
         "            x = convolution_block(x, 64, 1, index='disc_11')\n",
         "            \n",
-        "            x = residual_block(x, 64, 128, 'disc_12', _leaky_relu, activation_first=True)\n",
-        "            x = residual_block(x, 128, 128, 'disc_13', _leaky_relu, activation_first=True)\n",
-        "            x = _pooling(x, 2, 'disc_14')\n",
+        "            x = residual_block(x, 64, 64, 'disc_12', _leaky_relu, activation_first=True)\n",
+        "            x = residual_block(x, 64, 128, 'disc_13', _leaky_relu, activation_first=True)\n",
+        "            x = _pooling(x, 3, 2, 'disc_14')\n",
         "            \n",
-        "            x = residual_block(x, 128, 256, 'disc_15', _leaky_relu, activation_first=True)\n",
-        "            x = residual_block(x, 256, 256, 'disc_16', _leaky_relu, activation_first=True)\n",
-        "            x = _pooling(x, 2, 'disc_17')\n",
+        "            x = residual_block(x, 128, 128, 'disc_15', _leaky_relu, activation_first=True)\n",
+        "            x = residual_block(x, 128, 256, 'disc_16', _leaky_relu, activation_first=True)\n",
+        "            x = _pooling(x, 3, 2, 'disc_17')\n",
         "            \n",
-        "            x = residual_block(x, 256, 512, 'disc_18', _leaky_relu, activation_first=True)\n",
-        "            x = residual_block(x, 512, 512, 'disc_19', _leaky_relu, activation_first=True)\n",
-        "            x = _pooling(x, 2, 'disc_20')\n",
+        "            x = residual_block(x, 256, 256, 'disc_18', _leaky_relu, activation_first=True)\n",
+        "            x = residual_block(x, 256, 512, 'disc_19', _leaky_relu, activation_first=True)\n",
+        "            x = _pooling(x, 3, 2, 'disc_20')\n",
         "            \n",
-        "            x = residual_block(x, 512, 1024, 'disc_21', _leaky_relu, activation_first=True)\n",
-        "            x = residual_block(x, 1024, 1024, 'disc_22', _leaky_relu, activation_first=True)\n",
-        "            x = _pooling(x, 2, 'disc_23')\n",
+        "            x = residual_block(x, 512, 512, 'disc_21', _leaky_relu, activation_first=True)\n",
+        "            x = residual_block(x, 512, 1024, 'disc_22', _leaky_relu, activation_first=True)\n",
+        "            x = _pooling(x, 3, 2, 'disc_23')\n",
         "            \n",
         "            x = residual_block(x, 1024, 1024, 'disc_24', _leaky_relu, activation_first=True)\n",
         "            x = residual_block(x, 1024, 1024, 'disc_25', _leaky_relu, activation_first=True)\n",
-        "            x = _pooling(x, 3, 'disc_26')\n",
         "            \n",
-        "            x = convolution_block(x, NUM_CLASSES, 1, index='disc_26', activation=_leaky_relu, activation_first=True)\n",
+        "            x = convolution_block(x, NUM_CLASSES, 1, 1, index='disc_26', activation=_leaky_relu, activation_first=True)\n",
         "#             x = tf.squeeze(x)\n",
         "#             label = tf.expand_dims(label, axis=1)\n",
         "#             x = tf.gather_nd(x, label, batch_dims=1)\n",
@@ -571,7 +571,7 @@
         "    print (e)\n",
         "    pass"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
