--- a/funit4.ipynb
+++ b/funit4.ipynb
@@ -81,7 +81,7 @@
         "NUM_CLASSES = 21\n",
         "\n",
         "MODEL_NAME = 'FUNIT'\n",
-        "RUN_NAME = 'FUNIT_only_gen_22'\n",
+        "RUN_NAME = 'FUNIT_only_gen_23'\n",
         "\n",
         "data_train_file = 'gs://tputestingmnist/datasets/dataset_train_funit.tfrecords'\n",
         "data_test_file = 'gs://tputestingmnist/datasets/dataset_test_funit.tfrecords'\n",
@@ -485,7 +485,7 @@
         "            g_loss_reconstruction = l1_norm(generated_images_content_reconstruction - content_images)\n",
         "            g_loss_feature_matching = l1_norm(d_on_g_features - d_on_data_features)\n",
         "            \n",
-        "            g_loss_reduced = tf.reduce_mean(g_loss + g_loss_reconstruction + g_loss_feature_matching)\n",
+        "            g_loss_reduced = tf.reduce_mean(g_loss + 10*g_loss_reconstruction + 20*g_loss_feature_matching)\n",
         "            \n",
         "        # TRAIN #\n",
         "        if mode == tf.estimator.ModeKeys.TRAIN:\n",
@@ -631,20 +631,17 @@
       "metadata": {
         "id": "3eImay3kpN2C",
         "colab_type": "code",
-        "outputId": "804acdc6-f3c7-4020-bd6e-34a86879aedd",
+        "outputId": "26f5af9d-a4a6-4611-cfd4-a5d6997f8450",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 735
+          "height": 129
         }
       },
       "source": [
         "tf.logging.set_verbosity(tf.logging.INFO)\n",
         "\n",
         "try:\n",
-        "    for G_LR in [1e-4, 2e-4, 5e-4, 1e-3, 2e-3]:        \n",
-        "        EPOCHS = 10000\n",
-        "        RUN_NAME = 'FUNIT_only_gen_22_{}'.format(G_LR)\n",
-        "        do_experiment()\n",
+        "    do_experiment()\n",
         "except Exception as e:\n",
         "    print (e)\n",
         "    pass"
@@ -654,56 +651,11 @@
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "W0822 17:51:31.350463 140181619099520 estimator.py:1984] Estimator's model_fn (<function make_model_fn.<locals>.model_fn at 0x7f7e5a509598>) includes params argument, but params are not passed to Estimator.\n",
-            "I0822 17:51:31.352549 140181619099520 estimator.py:209] Using config: {'_model_dir': 'gs://tputestingmnist/FUNIT/FUNIT_only_gen_22/', '_tf_random_seed': None, '_save_summary_steps': 1000, '_save_checkpoints_steps': 1000, '_save_checkpoints_secs': None, '_session_config': allow_soft_placement: true\n",
-            "graph_options {\n",
-            "  rewrite_options {\n",
-            "    meta_optimizer_iterations: ONE\n",
-            "  }\n",
-            "}\n",
-            ", '_keep_checkpoint_max': 3, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': None, '_train_distribute': None, '_device_fn': None, '_protocol': None, '_eval_distribute': None, '_experimental_distribute': None, '_experimental_max_worker_delay_secs': None, '_service': None, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x7f7e4996c048>, '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': 'grpc://10.17.62.106:8470', '_evaluation_master': 'grpc://10.17.62.106:8470', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1, '_tpu_config': TPUConfig(iterations_per_loop=1000, num_shards=None, num_cores_per_replica=None, per_host_input_for_training=2, tpu_job_name=None, initial_infeed_sleep_secs=None, input_partition_dims=None, eval_training_input_configuration=2), '_cluster': None}\n",
-            "I0822 17:51:31.355968 140181619099520 tpu_context.py:209] _TPUContext: eval_on_tpu True\n",
-            "W0822 17:51:31.359171 140181619099520 estimator.py:1984] Estimator's model_fn (<function make_model_fn.<locals>.model_fn at 0x7f7e5a509598>) includes params argument, but params are not passed to Estimator.\n",
-            "I0822 17:51:31.363284 140181619099520 estimator.py:209] Using config: {'_model_dir': 'gs://tputestingmnist/FUNIT/FUNIT_only_gen_22/', '_tf_random_seed': None, '_save_summary_steps': 1000, '_save_checkpoints_steps': 1000, '_save_checkpoints_secs': None, '_session_config': allow_soft_placement: true\n",
-            "graph_options {\n",
-            "  rewrite_options {\n",
-            "    meta_optimizer_iterations: ONE\n",
-            "  }\n",
-            "}\n",
-            ", '_keep_checkpoint_max': 3, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': None, '_train_distribute': None, '_device_fn': None, '_protocol': None, '_eval_distribute': None, '_experimental_distribute': None, '_experimental_max_worker_delay_secs': None, '_service': None, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x7f7e4996ce10>, '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': 'grpc://10.17.62.106:8470', '_evaluation_master': 'grpc://10.17.62.106:8470', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1, '_tpu_config': TPUConfig(iterations_per_loop=1000, num_shards=None, num_cores_per_replica=None, per_host_input_for_training=2, tpu_job_name=None, initial_infeed_sleep_secs=None, input_partition_dims=None, eval_training_input_configuration=2), '_cluster': None}\n",
-            "I0822 17:51:31.365471 140181619099520 tpu_context.py:209] _TPUContext: eval_on_tpu True\n",
-            "W0822 17:51:31.373983 140181619099520 tpu_context.py:211] eval_on_tpu ignored because use_tpu is False.\n",
-            "I0822 17:51:31.590286 140181619099520 tpu_system_metadata.py:78] Querying Tensorflow master (grpc://10.17.62.106:8470) for TPU system metadata.\n",
-            "I0822 17:51:31.599957 140181619099520 tpu_system_metadata.py:148] Found TPU system:\n",
-            "I0822 17:51:31.601189 140181619099520 tpu_system_metadata.py:149] *** Num TPU Cores: 8\n",
-            "I0822 17:51:31.602151 140181619099520 tpu_system_metadata.py:150] *** Num TPU Workers: 1\n",
-            "I0822 17:51:31.608434 140181619099520 tpu_system_metadata.py:152] *** Num TPU Cores Per Worker: 8\n",
-            "I0822 17:51:31.611712 140181619099520 tpu_system_metadata.py:154] *** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:CPU:0, CPU, -1, 13580050869835344000)\n",
-            "I0822 17:51:31.614090 140181619099520 tpu_system_metadata.py:154] *** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:0, TPU, 17179869184, 10461852034566054033)\n",
-            "I0822 17:51:31.616790 140181619099520 tpu_system_metadata.py:154] *** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:1, TPU, 17179869184, 2264020149355364805)\n",
-            "I0822 17:51:31.619528 140181619099520 tpu_system_metadata.py:154] *** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:2, TPU, 17179869184, 18061697157085152939)\n",
-            "I0822 17:51:31.622179 140181619099520 tpu_system_metadata.py:154] *** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:3, TPU, 17179869184, 4285095762378482574)\n",
-            "I0822 17:51:31.624786 140181619099520 tpu_system_metadata.py:154] *** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:4, TPU, 17179869184, 16780729529404504388)\n",
-            "I0822 17:51:31.627639 140181619099520 tpu_system_metadata.py:154] *** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:5, TPU, 17179869184, 13879094098981912727)\n",
-            "I0822 17:51:31.629160 140181619099520 tpu_system_metadata.py:154] *** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:6, TPU, 17179869184, 288524834530367940)\n",
-            "I0822 17:51:31.632776 140181619099520 tpu_system_metadata.py:154] *** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:7, TPU, 17179869184, 677567871963158814)\n",
-            "I0822 17:51:31.634144 140181619099520 tpu_system_metadata.py:154] *** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU_SYSTEM:0, TPU_SYSTEM, 8589934592, 1152689693205796871)\n",
-            "I0822 17:51:31.635590 140181619099520 tpu_system_metadata.py:154] *** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:XLA_CPU:0, XLA_CPU, 17179869184, 17963972467308828528)\n",
-            "I0822 17:51:31.657386 140181619099520 estimator.py:1145] Calling model_fn.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Starting training\n"
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/gdrive\n"
           ],
           "name": "stdout"
         }
