--- a/funit4.ipynb
+++ b/funit4.ipynb
@@ -72,8 +72,8 @@
         "\n",
         "DROPOUT_PROB = 0.5\n",
         "ALPHA = 0.2\n",
-        "BATCH_SIZE = 1024\n",
-        "EPOCHS = 100000\n",
+        "BATCH_SIZE = 64\n",
+        "EPOCHS = 20000\n",
         "EVAL_EPOCHS = 1000\n",
         "G_LR = 0.0002\n",
         "D_LR = 0.0001\n",
@@ -81,7 +81,7 @@
         "NUM_CLASSES = 21\n",
         "\n",
         "MODEL_NAME = 'FUNIT'\n",
-        "RUN_NAME = 'FUNIT_only_gen_23'\n",
+        "RUN_NAME = 'FUNIT_only_gen_24'\n",
         "\n",
         "data_train_file = 'gs://tputestingmnist/datasets/dataset_train_funit.tfrecords'\n",
         "data_test_file = 'gs://tputestingmnist/datasets/dataset_test_funit.tfrecords'\n",
@@ -428,7 +428,23 @@
       "source": [
         "# It's not exactly the norm, but taking mean instead of sum makes the losses more comparable\n",
         "def l1_norm(x):\n",
-        "    return tf.reduce_mean(tf.math.abs(x), axis=[1,2,3])"
+        "    return tf.reduce_mean(tf.math.abs(x), axis=[1,2,3])\n",
+        "\n",
+        "\n",
+        "def pgd(model, x, y, labels, epsilon=0.1, alpha=0.015, num_iter=15):\n",
+        "    delta = tf.zeros_like(x, dtype=tf.float32)\n",
+        "    \n",
+        "    for i in range(num_iter):\n",
+        "        pred, _ = model(x + delta, labels)\n",
+        "        loss = tf.losses.sigmoid_cross_entropy(y, pred)\n",
+        "        \n",
+        "        optimizer = tf.train.GradientDescentOptimizer(learning_rate=None)\n",
+        "        gradients = optimizer.compute_gradients(loss, [delta])\n",
+        "        delta_grad = gradients[0][0]\n",
+        "        \n",
+        "        delta = tf.clip_by_value(delta + tf.math.sign(delta_grad) * alpha, -epsilon, epsilon)\n",
+        "        \n",
+        "    return x + delta"
       ],
       "execution_count": 0,
       "outputs": []
@@ -458,12 +474,20 @@
         "                'style_images': style_images\n",
         "            }\n",
         "            return tf.contrib.tpu.TPUEstimatorSpec(mode=mode, predictions=predictions)\n",
-        "\n",
+        "        \n",
+        "        # Labels\n",
+        "        d_on_data_labels = tf.ones_like(labels)\n",
+        "        d_on_g_labels = tf.zeros_like(labels)\n",
+        "        \n",
+        "        # Attacks\n",
+        "        attacked_style_images = pgd(model.discriminator, style_images, d_on_data_labels, labels)\n",
+        "        attacked_generated_images = pgd(model.discriminator, generated_images, d_on_g_labels, labels)\n",
+        "        \n",
         "        # Discriminator loss\n",
-        "        d_on_data_results, d_on_data_features = model.discriminator(style_images, labels)\n",
+        "        d_on_data_results, d_on_data_features = model.discriminator(attacked_style_images, labels)\n",
         "        d_on_data_logits = tf.squeeze(d_on_data_results)\n",
         "        \n",
-        "        d_on_g_results, d_on_g_features = model.discriminator(generated_images, labels)\n",
+        "        d_on_g_results, d_on_g_features = model.discriminator(attacked_generated_images, labels)\n",
         "        d_on_g_logits = tf.squeeze(d_on_g_results)\n",
         "        \n",
         "        # Content reconstruction\n",
@@ -485,7 +509,7 @@
         "            g_loss_reconstruction = l1_norm(generated_images_content_reconstruction - content_images)\n",
         "            g_loss_feature_matching = l1_norm(d_on_g_features - d_on_data_features)\n",
         "            \n",
-        "            g_loss_reduced = tf.reduce_mean(g_loss + 10*g_loss_reconstruction + 20*g_loss_feature_matching)\n",
+        "            g_loss_reduced = tf.reduce_mean(g_loss + g_loss_reconstruction + g_loss_feature_matching)\n",
         "            \n",
         "        # TRAIN #\n",
         "        if mode == tf.estimator.ModeKeys.TRAIN:\n",
@@ -522,7 +546,7 @@
         "\n",
         "            return tf.contrib.tpu.TPUEstimatorSpec(mode=mode, loss=d_loss_reduced + g_loss_reduced,\n",
         "                                                   eval_metrics=(_eval_metric_fn, [d_loss, g_loss, g_loss_reconstruction, g_loss_feature_matching,\n",
-        "                                                                                   tf.ones_like(labels), tf.zeros_like(labels),\n",
+        "                                                                                   d_on_data_labels, d_on_g_labels,\n",
         "                                                                                   d_on_data_logits, d_on_g_logits]))\n",
         "    return model_fn"
       ],
@@ -631,10 +655,10 @@
       "metadata": {
         "id": "3eImay3kpN2C",
         "colab_type": "code",
-        "outputId": "26f5af9d-a4a6-4611-cfd4-a5d6997f8450",
+        "outputId": "a100ba5d-302f-4a89-f17e-c314827492aa",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 129
+          "height": 1000
         }
       },
       "source": [
@@ -651,13 +675,90 @@
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/gdrive\n"
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "W0823 10:58:39.377160 140655963993984 estimator.py:1984] Estimator's model_fn (<function make_model_fn.<locals>.model_fn at 0x7fec9f6e42f0>) includes params argument, but params are not passed to Estimator.\n",
+            "I0823 10:58:39.379641 140655963993984 estimator.py:209] Using config: {'_model_dir': 'gs://tputestingmnist/FUNIT/FUNIT_only_gen_24/', '_tf_random_seed': None, '_save_summary_steps': 1000, '_save_checkpoints_steps': 1000, '_save_checkpoints_secs': None, '_session_config': allow_soft_placement: true\n",
+            "graph_options {\n",
+            "  rewrite_options {\n",
+            "    meta_optimizer_iterations: ONE\n",
+            "  }\n",
+            "}\n",
+            ", '_keep_checkpoint_max': 3, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': None, '_train_distribute': None, '_device_fn': None, '_protocol': None, '_eval_distribute': None, '_experimental_distribute': None, '_experimental_max_worker_delay_secs': None, '_service': None, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x7fec9e9bd550>, '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': 'grpc://10.19.26.42:8470', '_evaluation_master': 'grpc://10.19.26.42:8470', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1, '_tpu_config': TPUConfig(iterations_per_loop=1000, num_shards=None, num_cores_per_replica=None, per_host_input_for_training=2, tpu_job_name=None, initial_infeed_sleep_secs=None, input_partition_dims=None, eval_training_input_configuration=2), '_cluster': None}\n",
+            "I0823 10:58:39.381542 140655963993984 tpu_context.py:209] _TPUContext: eval_on_tpu True\n",
+            "W0823 10:58:39.382914 140655963993984 estimator.py:1984] Estimator's model_fn (<function make_model_fn.<locals>.model_fn at 0x7fec9f6e42f0>) includes params argument, but params are not passed to Estimator.\n",
+            "I0823 10:58:39.387826 140655963993984 estimator.py:209] Using config: {'_model_dir': 'gs://tputestingmnist/FUNIT/FUNIT_only_gen_24/', '_tf_random_seed': None, '_save_summary_steps': 1000, '_save_checkpoints_steps': 1000, '_save_checkpoints_secs': None, '_session_config': allow_soft_placement: true\n",
+            "graph_options {\n",
+            "  rewrite_options {\n",
+            "    meta_optimizer_iterations: ONE\n",
+            "  }\n",
+            "}\n",
+            ", '_keep_checkpoint_max': 3, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': None, '_train_distribute': None, '_device_fn': None, '_protocol': None, '_eval_distribute': None, '_experimental_distribute': None, '_experimental_max_worker_delay_secs': None, '_service': None, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x7fec9e9bd1d0>, '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': 'grpc://10.19.26.42:8470', '_evaluation_master': 'grpc://10.19.26.42:8470', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1, '_tpu_config': TPUConfig(iterations_per_loop=1000, num_shards=None, num_cores_per_replica=None, per_host_input_for_training=2, tpu_job_name=None, initial_infeed_sleep_secs=None, input_partition_dims=None, eval_training_input_configuration=2), '_cluster': None}\n",
+            "I0823 10:58:39.390929 140655963993984 tpu_context.py:209] _TPUContext: eval_on_tpu True\n",
+            "W0823 10:58:39.397586 140655963993984 tpu_context.py:211] eval_on_tpu ignored because use_tpu is False.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Starting training\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "I0823 10:58:41.667085 140655963993984 tpu_system_metadata.py:78] Querying Tensorflow master (grpc://10.19.26.42:8470) for TPU system metadata.\n",
+            "I0823 10:58:41.676634 140655963993984 tpu_system_metadata.py:148] Found TPU system:\n",
+            "I0823 10:58:41.678084 140655963993984 tpu_system_metadata.py:149] *** Num TPU Cores: 8\n",
+            "I0823 10:58:41.685155 140655963993984 tpu_system_metadata.py:150] *** Num TPU Workers: 1\n",
+            "I0823 10:58:41.686735 140655963993984 tpu_system_metadata.py:152] *** Num TPU Cores Per Worker: 8\n",
+            "I0823 10:58:41.688577 140655963993984 tpu_system_metadata.py:154] *** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:CPU:0, CPU, -1, 11200526346690811664)\n",
+            "I0823 10:58:41.690019 140655963993984 tpu_system_metadata.py:154] *** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:0, TPU, 17179869184, 10939946335227809371)\n",
+            "I0823 10:58:41.692269 140655963993984 tpu_system_metadata.py:154] *** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:1, TPU, 17179869184, 11255317273121868169)\n",
+            "I0823 10:58:41.694630 140655963993984 tpu_system_metadata.py:154] *** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:2, TPU, 17179869184, 4774843142776775322)\n",
+            "I0823 10:58:41.695620 140655963993984 tpu_system_metadata.py:154] *** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:3, TPU, 17179869184, 1691222857328419155)\n",
+            "I0823 10:58:41.696956 140655963993984 tpu_system_metadata.py:154] *** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:4, TPU, 17179869184, 16651512017209637970)\n",
+            "I0823 10:58:41.698747 140655963993984 tpu_system_metadata.py:154] *** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:5, TPU, 17179869184, 3648656220404455369)\n",
+            "I0823 10:58:41.700877 140655963993984 tpu_system_metadata.py:154] *** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:6, TPU, 17179869184, 7227491956695296267)\n",
+            "I0823 10:58:41.702917 140655963993984 tpu_system_metadata.py:154] *** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU:7, TPU, 17179869184, 594459809314044397)\n",
+            "I0823 10:58:41.705093 140655963993984 tpu_system_metadata.py:154] *** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:TPU_SYSTEM:0, TPU_SYSTEM, 8589934592, 213230798170061431)\n",
+            "I0823 10:58:41.706183 140655963993984 tpu_system_metadata.py:154] *** Available Device: _DeviceAttributes(/job:tpu_worker/replica:0/task:0/device:XLA_CPU:0, XLA_CPU, 17179869184, 6310171989053822339)\n",
+            "I0823 10:58:41.747656 140655963993984 estimator.py:1145] Calling model_fn.\n",
+            "I0823 10:59:58.944015 140655963993984 basic_session_run_hooks.py:541] Create CheckpointSaverHook.\n",
+            "I0823 10:59:59.238480 140655963993984 estimator.py:1147] Done calling model_fn.\n",
+            "I0823 10:59:59.240275 140655963993984 tpu_estimator.py:499] TPU job name tpu_worker\n",
+            "I0823 11:00:00.067962 140655963993984 monitored_session.py:240] Graph was finalized.\n",
+            "I0823 11:00:00.271073 140655963993984 saver.py:1280] Restoring parameters from gs://tputestingmnist/FUNIT/FUNIT_only_gen_24/model.ckpt-0\n",
+            "I0823 11:00:35.773743 140655963993984 session_manager.py:500] Running local_init_op.\n",
+            "I0823 11:00:41.169807 140655963993984 session_manager.py:502] Done running local_init_op.\n",
+            "I0823 11:01:27.061042 140655963993984 basic_session_run_hooks.py:606] Saving checkpoints for 0 into gs://tputestingmnist/FUNIT/FUNIT_only_gen_24/model.ckpt.\n",
+            "I0823 11:02:09.323676 140655963993984 util.py:98] Initialized dataset iterators in 5 seconds\n",
+            "I0823 11:02:09.325247 140655963993984 session_support.py:332] Installing graceful shutdown hook.\n",
+            "I0823 11:02:09.329177 140655963993984 session_support.py:82] Creating heartbeat manager for ['/job:tpu_worker/replica:0/task:0/device:CPU:0']\n",
+            "I0823 11:02:09.333765 140655963993984 session_support.py:105] Configuring worker heartbeat: shutdown_mode: WAIT_FOR_COORDINATOR\n",
+            "\n",
+            "I0823 11:02:09.339882 140655963993984 tpu_estimator.py:557] Init TPU system\n",
+            "I0823 11:02:12.870555 140655963993984 tpu_estimator.py:566] Initialized TPU in 3 seconds\n",
+            "I0823 11:02:12.872545 140654123161344 tpu_estimator.py:514] Starting infeed thread controller.\n",
+            "I0823 11:02:12.873219 140654063392512 tpu_estimator.py:533] Starting outfeed thread controller.\n",
+            "I0823 11:02:18.656912 140655963993984 tpu_estimator.py:590] Enqueue next (1000) batch(es) of data to infeed.\n",
+            "I0823 11:02:18.658279 140655963993984 tpu_estimator.py:594] Dequeue next (1000) batch(es) of data from outfeed.\n",
+            "I0823 11:04:34.225179 140654063392512 tpu_estimator.py:275] Outfeed finished for iteration (0, 0)\n",
+            "I0823 11:05:34.610434 140654063392512 tpu_estimator.py:275] Outfeed finished for iteration (0, 84)\n",
+            "I0823 11:06:34.993403 140654063392512 tpu_estimator.py:275] Outfeed finished for iteration (0, 168)\n",
+            "I0823 11:07:35.376892 140654063392512 tpu_estimator.py:275] Outfeed finished for iteration (0, 252)\n",
+            "I0823 11:08:35.758629 140654063392512 tpu_estimator.py:275] Outfeed finished for iteration (0, 336)\n",
+            "I0823 11:09:36.143445 140654063392512 tpu_estimator.py:275] Outfeed finished for iteration (0, 420)\n",
+            "I0823 11:10:36.528119 140654063392512 tpu_estimator.py:275] Outfeed finished for iteration (0, 504)\n"
+          ],
+          "name": "stderr"
         }
       ]
     }
