--- a/notebooks/funit.ipynb
+++ b/notebooks/funit.ipynb
@@ -62,16 +62,16 @@
         "BATCH_SIZE = 1024\n",
         "EPOCHS = 50000\n",
         "EVAL_EPOCHS = 3000\n",
-        "G_LR = 0.0001\n",
-        "D_LR = 0.0002\n",
+        "G_LR = 0.0002\n",
+        "D_LR = 0.0001\n",
         "LR_STD = 1\n",
-        "LR_REC = 0.1\n",
+        "LR_REC = 1\n",
         "LR_FEAT = 1\n",
         "KERNEL_SIZE = 4\n",
         "NUM_CLASSES = 21\n",
         "\n",
         "MODEL_NAME = 'FUNIT'\n",
-        "RUN_NAME = 'FUNIT_new_hope_11'\n",
+        "RUN_NAME = 'FUNIT_new_hope_12'\n",
         "\n",
         "data_train_file = 'gs://tputestingmnist/datasets/dataset_funit_2.tfrecords'\n",
         "data_test_file = 'gs://tputestingmnist/datasets/dataset_test_funit_2.tfrecords'\n",
@@ -406,10 +406,7 @@
       "source": [
         "# It's not exactly the norm, but taking mean instead of sum makes the losses more comparable\n",
         "def l1_norm(x):\n",
-        "    return tf.reduce_mean(tf.math.abs(x), axis=list(range(1, len(x.shape))))\n",
-        "\n",
-        "def features_mean(x):\n",
-        "    return tf.reduce_mean(x, axis=[1,2])\n",
+        "    return tf.reduce_mean(tf.math.abs(x), axis=[1,2,3])\n",
         "\n",
         "def hinge_loss_d(pred, y):\n",
         "    return tf.nn.relu(1 - pred * y)\n",
@@ -479,7 +476,6 @@
         "            d_on_cr_results, d_on_cr_features = model.discriminator(generated_images_cr, content_labels)\n",
         "            d_on_cr_results = tf.gather_nd(d_on_cr_results, tf.expand_dims(content_labels, axis=1), batch_dims=1)\n",
         "            d_on_cr_logits = tf.squeeze(d_on_cr_results)\n",
-        "            _, d_on_content_features = model.discriminator(generated_images_cr, content_labels)\n",
         "            \n",
         "            # Variables\n",
         "            d_vars = tf.get_collection(tf.GraphKeys.GLOBAL_VARIABLES, scope='Discriminator')\n",
@@ -496,10 +492,7 @@
         "                # Generator loss\n",
         "                g_loss_gan = LR_STD * 0.5 * (hinge_loss_g(d_on_g_logits) + hinge_loss_g(d_on_cr_logits))\n",
         "                g_loss_rec = LR_REC * l1_norm(generated_images_cr - content_images)\n",
-        "\n",
-        "                g_loss_feat_style = l1_norm(features_mean(d_on_g_features) - features_mean(d_on_data_features))\n",
-        "                g_loss_feat_cr = l1_norm(features_mean(d_on_cr_features) - features_mean(d_on_content_features))\n",
-        "                g_loss_feat = LR_FEAT * (g_loss_feat_style + g_loss_feat_cr)\n",
+        "                g_loss_feat = LR_FEAT * l1_norm(d_on_g_features - d_on_data_features)\n",
         "                \n",
         "                g_loss_reduced = tf.reduce_mean(g_loss_gan + g_loss_rec + g_loss_feat)\n",
         "                \n",
